# licensing-frontend

./: .pre-commit-config.yaml  .tool-versions  Makefile  README.md  pyproject.toml
.github/workflows/: format.yaml
citizen_frontend/: urls.py  views.py
citizen_frontend/templates/citizen_frontend/: base.html  licence_introduction_page.html  test.html
citizen_frontend/templates/citizen_frontend/includes/: licence_introduction_page_heading.html
citizen_frontend/templates/citizen_frontend/partials/: fee.html  supporting_documents.html
citizen_frontend/tests/ui/: test_licence_introduction_page.py
config/: settings.py  urls.py
